# JnitraceForCpp

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jnitrace/: MainActivity.java  traceTest.java
app/src/main/jni/: CMakeLists.txt  Jnitrace.cpp  Jnitrace.h  main_substrate.cpp  main_xhook.c
app/src/main/jni/Substrate/: And64InlineHook.cpp  SubstrateHook.cpp  SubstrateHook.h
app/src/main/jni/log/: logging.h
app/src/main/jni/test/: test.cpp
app/src/main/jni/utils/: parse.cpp  parse.h
app/src/main/res/layout/: activity_main.xml
